include ../common.mk
AUTOMAKE_OPTIONS = subdir-objects

AM_CFLAGS = $(XP_LCFLAGS) $(XP_CFLAGS)
LDADD = $(TCM) $(XP_LLIBS) $(XP_LIBS)

check_PROGRAMS = $(tprogs)
BUILT_SOURCES = $(tprogs:$(EXEEXT)=.c)
CLEANFILES = $(BUILT_SOURCES)

tprogs = \
	pAllocColor/pAllocColor \
	pAllocColorCells/pAllocColorCells \
	pAllocColorPlanes/pAllocColorPlanes \
	pAllocNamedColor/pAllocNamedColor \
	pAllowEvents/pAllowEvents \
	pBadRequest/pBadRequest \
	pBell/pBell \
	pChangeActivePointerGrab/pChangeActivePointerGrab \
	pChangeGC/pChangeGC \
	pChangeHosts/pChangeHosts \
	pChangeKeyboardControl/pChangeKeyboardControl \
	pChangeKeyboardMapping/pChangeKeyboardMapping \
	pChangePointerControl/pChangePointerControl \
	pChangeProperty/pChangeProperty \
	pChangeSaveSet/pChangeSaveSet \
	pChangeWindowAttributes/pChangeWindowAttributes \
	pClearArea/pClearArea \
	pCloseFont/pCloseFont \
	pConfigureWindow/pConfigureWindow \
	pConvertSelection/pConvertSelection \
	pCopyArea/pCopyArea \
	pCopyColormapAndFree/pCopyColormapAndFree \
	pCopyGC/pCopyGC \
	pCopyPlane/pCopyPlane \
	pCirculateWindow/pCirculateWindow \
	pCreateColormap/pCreateColormap \
	pCreateCursor/pCreateCursor \
	pCreateGC/pCreateGC \
	pCreateGlyphCursor/pCreateGlyphCursor \
	pCreatePixmap/pCreatePixmap \
	pCreateWindow/pCreateWindow \
	pDeleteProperty/pDeleteProperty \
	pDestroySubwindows/pDestroySubwindows \
	pDestroyWindow/pDestroyWindow \
	pFillPoly/pFillPoly \
	pFreeColormap/pFreeColormap \
	pFreeColors/pFreeColors \
	pFreeCursor/pFreeCursor \
	pForceScreenSaver/pForceScreenSaver \
	pFreeGC/pFreeGC \
	pFreePixmap/pFreePixmap \
	pGrabButton/pGrabButton \
	pGrabKey/pGrabKey \
	pGrabKeyboard/pGrabKeyboard \
	pGrabPointer/pGrabPointer \
	pGrabServer/pGrabServer \
	pGetAtomName/pGetAtomName \
	pGetFontPath/pGetFontPath \
	pGetGeometry/pGetGeometry \
	pGetImage/pGetImage \
	pGetInputFocus/pGetInputFocus \
	pGetKeyboardControl/pGetKeyboardControl \
	pGetKeyboardMapping/pGetKeyboardMapping \
	pGetModifierMapping/pGetModifierMapping \
	pGetMotionEvents/pGetMotionEvents \
	pGetPointerControl/pGetPointerControl \
	pGetPointerMapping/pGetPointerMapping \
	pGetProperty/pGetProperty \
	pGetScreenSaver/pGetScreenSaver \
	pGetSelectionOwner/pGetSelectionOwner \
	pGetWindowAttributes/pGetWindowAttributes \
	pImageText16/pImageText16 \
	pImageText8/pImageText8 \
	pInstallColormap/pInstallColormap \
	pInternAtom/pInternAtom \
	pKillClient/pKillClient \
	pLookupColor/pLookupColor \
	pListExtensions/pListExtensions \
	pListFonts/pListFonts \
	pListFontsWithInfo/pListFontsWithInfo \
	pListHosts/pListHosts \
	pListInstalledColormaps/pListInstalledColormaps \
	pListProperties/pListProperties \
	pMapSubwindows/pMapSubwindows \
	pMapWindow/pMapWindow \
	pNoOperation/pNoOperation \
	pOpenDisplay/pOpenDisplay \
	pOpenFont/pOpenFont \
	pPolyArc/pPolyArc \
	pPolyFillArc/pPolyFillArc \
	pPolyFillRectangle/pPolyFillRectangle \
	pPolyLine/pPolyLine \
	pPolyPoint/pPolyPoint \
	pPolyRectangle/pPolyRectangle \
	pPolySegment/pPolySegment \
	pPolyText16/pPolyText16 \
	pPolyText8/pPolyText8 \
	pPutImage/pPutImage \
	pQueryBestSize/pQueryBestSize \
	pQueryColors/pQueryColors \
	pQueryExtension/pQueryExtension \
	pQueryFont/pQueryFont \
	pQueryKeymap/pQueryKeymap \
	pQueryPointer/pQueryPointer \
	pQueryTree/pQueryTree \
	pQueryTextExtents/pQueryTextExtents \
	pRecolorCursor/pRecolorCursor \
	pReparentWindow/pReparentWindow \
	pRotateProperties/pRotateProperties \
	pSendEvent/pSendEvent \
	pSetAccessControl/pSetAccessControl \
	pSetClipRectangles/pSetClipRectangles \
	pSetCloseDownMode/pSetCloseDownMode \
	pSetDashes/pSetDashes \
	pSetFontPath/pSetFontPath \
	pSetInputFocus/pSetInputFocus \
	pSetModifierMapping/pSetModifierMapping \
	pSetPointerMapping/pSetPointerMapping \
	pStoreColors/pStoreColors \
	pStoreNamedColor/pStoreNamedColor \
	pSetScreenSaver/pSetScreenSaver \
	pSetSelectionOwner/pSetSelectionOwner \
	pTranslateCoords/pTranslateCoords \
	pUngrabButton/pUngrabButton \
	pUngrabKey/pUngrabKey \
	pUngrabKeyboard/pUngrabKeyboard \
	pUngrabPointer/pUngrabPointer \
	pUngrabServer/pUngrabServer \
	pUnmapSubwindows/pUnmapSubwindows \
	pUnmapWindow/pUnmapWindow \
	pUninstallColormap/pUninstallColormap \
	pWarpPointer/pWarpPointer
