include ../common.mk

scenarios_DATA = \
		shape_scen \
		XIproto_scen \
		XI_scen \
		Xlib10_scen \
		Xlib11_scen \
		Xlib12_scen \
		Xlib13_scen \
		Xlib14_scen \
		Xlib15_scen \
		Xlib16_scen \
		Xlib17_scen \
		Xlib3_scen \
		Xlib4_scen \
		Xlib5_scen \
		Xlib6_scen \
		Xlib7_scen \
		Xlib8_scen \
		Xlib9_scen \
		Xopen_scen \
		Xproto_scen \
		Xt10_scen \
		Xt11_scen \
		Xt12_scen \
		Xt13_scen \
		Xt14_scen \
		Xt15_scen \
		Xt3_scen \
		Xt4_scen \
		Xt5_scen \
		Xt6_scen \
		Xt7_scen \
		Xt8_scen \
		Xt9_scen \
		XtC_scen \
		XtE_scen
scenariosdir = $(datadir)/xts5/scenarios
